<resources>
    <string name="app_name">Calculator All Base</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="dot">.</string>

    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="division">\u00F7"</string>
    <string name="mul">\u00D7"</string>
    <string name="sqrt">\u221A"</string>
    <string name="sup">x\u2070"</string>

    <string name="del">DEL</string>
    <string name="clear">C</string>
    <string name="equal">=</string>
    <string name="sqr">x\u2073"</string>
    <string name="mod">%</string>
    <string name="bracket_opn">(</string>
    <string name="bracket_cls">)</string>
</resources>
