<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculator_MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@drawable/rounded_text"
        android:gravity="bottom"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/mainEqnTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginBottomEqnText"
            android:textAlignment="textEnd"
            android:textColor="@color/eqnTextColor"
            android:textSize="@dimen/resultTxtS" />

        <TextView
            android:id="@+id/resultTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginBottomResultText"
            android:textAlignment="textEnd"
            android:textColor="@color/resultTextColor"
            android:textSize="@dimen/resultTxtS" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/buttonsLayout"
        android:orientation="vertical"
        android:weightSum="6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tVclr"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/buttonMargin"
                android:layout_weight="1"
                android:background="@color/buttonBG"
                android:gravity="center"
                android:text="@string/clear"
                android:textColor="@color/lastButtonBG"
                android:textSize="@dimen/buttonTextSize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tVsqrt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/buttonMargin"
                android:layout_weight="1"
                android:background="@color/buttonBG"
                android:gravity="center"
                android:text="@string/sqrt"
                android:textColor="@color/butoonText"
                android:textSize="@dimen/buttonTextSize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tVpwr"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/buttonMargin"
                android:layout_weight="1"
                android:background="@color/buttonBG"
                android:gravity="center"
                android:text="@string/sup"
                android:textColor="@color/butoonText"
                android:textSize="@dimen/buttonTextSize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tVdel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/lastButtonBG"
                android:gravity="center"
                android:text="@string/del"
                android:textAlignment="center"
                android:textColor="@color/butoonText"
                android:textSize="@dimen/buttonTextSize"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tVsqr"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/buttonMargin"
                android:layout_weight="1"
                android:background="@color/buttonBG"
                android:gravity="center"
                android:text="@string/sqr"
                android:textColor="@color/butoonText"
                android:textSize="@dimen/buttonTextSize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tVob"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/buttonMargin"
                android:layout_weight="1"
                android:background="@color/buttonBG"
                android:gravity="center"
                android:text="@string/bracket_opn"
                android:textColor="@color/butoonText"
                android:textSize="@dimen/buttonTextSize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tVcb"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/buttonMargin"
                android:layout_weight="1"
                android:background="@color/buttonBG"
                android:gravity="center"
                android:text="@string/bracket_cls"
                android:textColor="@color/butoonText"
                android:textSize="@dimen/buttonTextSize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tVdiv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/lastButtonBG"
                android:gravity="center"
                android:text="@string/division"
                android:textColor="@color/butoonText"
                android:textSize="@dimen/buttonTextSize"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tV7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/buttonMargin"
                android:layout_weight="1"
                android:background="@color/buttonBG"
                android:gravity="center"
                android:text="@string/seven"
                android:textColor="@color/butoonText"
                android:textSize="@dimen/buttonTextSize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tV8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/buttonMargin"
                android:layout_weight="1"
                android:background="@color/buttonBG"
                android:gravity="center"
                android:text="@string/eight"
                android:textColor="@color/butoonText"
                android:textSize="@dimen/buttonTextSize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tV9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/buttonMargin"
                android:layout_weight="1"
                android:background="@color/buttonBG"
                android:gravity="center"
                android:text="@string/nine"
                android:textColor="@color/butoonText"
                android:textSize="@dimen/buttonTextSize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tVmul"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/lastButtonBG"
                android:gravity="center"
                android:text="@string/mul"
                android:textColor="@color/butoonText"
                android:textSize="@dimen/buttonTextSize"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tV4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/buttonMargin"
                android:layout_weight="1"
                android:background="@color/buttonBG"
                android:gravity="center"
                android:text="@string/four"
                android:textColor="@color/butoonText"
                android:textSize="@dimen/buttonTextSize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tV5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/buttonMargin"
                android:layout_weight="1"
                android:background="@color/buttonBG"
                android:gravity="center"
                android:text="@string/five"
                android:textColor="@color/butoonText"
                android:textSize="@dimen/buttonTextSize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tV6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/buttonMargin"
                android:layout_weight="1"
                android:background="@color/buttonBG"
                android:gravity="center"
                android:text="@string/six"
                android:textColor="@color/butoonText"
                android:textSize="@dimen/buttonTextSize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tVminus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/lastButtonBG"
                android:gravity="center"
                android:text="@string/minus"
                android:textColor="@color/butoonText"
                android:textSize="@dimen/buttonTextSize"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tV1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/buttonMargin"
                android:layout_weight="1"
                android:background="@color/buttonBG"
                android:gravity="center"
                android:text="@string/one"
                android:textColor="@color/butoonText"
                android:textSize="@dimen/buttonTextSize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tV2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/buttonMargin"
                android:layout_weight="1"
                android:background="@color/buttonBG"
                android:gravity="center"
                android:text="@string/two"
                android:textColor="@color/butoonText"
                android:textSize="@dimen/buttonTextSize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tV3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/buttonMargin"
                android:layout_weight="1"
                android:background="@color/buttonBG"
                android:gravity="center"
                android:text="@string/three"
                android:textColor="@color/butoonText"
                android:textSize="@dimen/buttonTextSize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tVplus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/lastButtonBG"
                android:gravity="center"
                android:text="@string/plus"
                android:textColor="@color/butoonText"
                android:textSize="@dimen/buttonTextSize"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tV0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/buttonMargin"
                android:layout_weight="1"
                android:background="@color/buttonBG"
                android:gravity="center"
                android:text="@string/zero"
                android:textColor="@color/butoonText"
                android:textSize="@dimen/buttonTextSize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tVdot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/buttonMargin"
                android:layout_weight="1"
                android:background="@color/buttonBG"
                android:gravity="center"
                android:text="@string/dot"
                android:textColor="@color/butoonText"
                android:textSize="@dimen/buttonTextSize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tVmod"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/buttonMargin"
                android:layout_weight="1"
                android:background="@color/buttonBG"
                android:gravity="center"
                android:text="@string/mod"
                android:textColor="@color/butoonText"
                android:textSize="@dimen/buttonTextSize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tVeql"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/lastButtonBG"
                android:gravity="center"
                android:text="@string/equal"
                android:textColor="@color/butoonText"
                android:textSize="@dimen/buttonTextSize"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>